--- a/stock_picking_partner_note/views/res_config_settings.xml
+++ b/stock_picking_partner_note/views/res_config_settings.xml
@@ -5,21 +5,17 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="stock.res_config_settings_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//div[@name='operations_setting_container']" position="inside">
-                <div
-                    class="col-12 col-lg-6 o_setting_box"
+            <xpath
+                expr="//block[@name='operations_setting_container']"
+                position="inside"
+            >
+                <setting
                     id="check_pickings_partner_note"
+                    string="Check picking note already in use"
+                    help="Add a constraint to check if the picking note is already in use on multiple partner"
                 >
-                    <div class="o_setting_left_pane">
-                        <field name="check_note_already_in_use" />
-                    </div>
-                    <div class="o_setting_right_pane">
-                        <label for="check_note_already_in_use" />
-                        <div class="text-muted">
-                            Add a constraint to check if the picking note is already in use on multiple partner
-                        </div>
-                    </div>
-                </div>
+                    <field name="check_note_already_in_use" />
+                </setting>
             </xpath>
         </field>
     </record>
