[MIG] stock_picking_return_lot: Migration to 17.0

--- a/stock_picking_return_lot/wizards/stock_return_picking.xml
+++ b/stock_picking_return_lot/wizards/stock_return_picking.xml
@@ -13,7 +13,7 @@
                 <field
                     name="lot_id"
                     groups="stock.group_production_lot"
-                    attrs="{'invisible': [('lots_visible', '=', False)]}"
+                    invisible="not lots_visible"
                 />
             </xpath>
         </field>
