--- a/stock_picking_return_lot/wizards/stock_return_picking.xml
+++ b/stock_picking_return_lot/wizards/stock_return_picking.xml
@@ -8,12 +8,15 @@
         <field name="model">stock.return.picking</field>
         <field name="inherit_id" ref="stock.view_stock_return_picking_form" />
         <field name="arch" type="xml">
+            <field name="picking_id" position="after">
+                <field name="lots_visible" invisible="True" />
+            </field>
             <xpath expr="//field[@name='product_id']" position="after">
-                <field name="lots_visible" invisible="1" />
                 <field
                     name="lot_id"
+                    options="{'no_create': True}"
                     groups="stock.group_production_lot"
-                    invisible="not lots_visible"
+                    column_invisible="not parent.lots_visible"
                 />
             </xpath>
         </field>
