--- a/stock_restrict_lot/views/stock_picking.xml
+++ b/stock_restrict_lot/views/stock_picking.xml
@@ -5,7 +5,7 @@
         <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
             <xpath
-                expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
+                expr="//field[@name='move_ids_without_package']/list/field[@name='product_id']"
                 position="after"
             >
                 <field
